<resources>
    <string name="app_name">PayEat</string>
    <string name="title_activity_manager_options">ManagerOptions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Manager_name"><![CDATA[שלום, <עידו>]]></string>
    <string name="restaurant_name"><![CDATA[<שם המסעדה>]]></string>
    <string name="edit_menu">ערוך תפריט</string>
    <string name="view_menu">הצג תפריט</string>
    <string name="edit_order">ערוך הזמנה קיימת</string>
    <string name="view_exist_orders">הצג הזמנות קיימות</string>
    <string name="restaurant_occupancy">תפוסת מסעדה</string>
    <string name="restaurant_logo">restaurant_logo</string>

    //Main menu activity strings
    <string name="activity_main_menu_gridview_imageView_description">Sub menu image</string>

    <string name="intent_extras_menu_name">menu name</string>
    <string name="table_number_request">הכנס מספר שולחן</string>
    <string name="shared_preferences_key">spk</string>
    <string name="ok">אישור</string>
    <string name="client_table_number">ctn</string>
    <string name="fragment_names_title">הכנס בין 2 ל-10 שמות כדי לפצל את החשבון, או לחץ דלג</string>
    <string name="single_share_text">כללי</string>
    <string name="split_bill_guide_text">סמן לכל סועד באיזה מנות הוא מתחלק</string>
    <string name="split_bill_dish_name_and_shares_number">%1$s (%2$d)</string>
    <string name="table_number_format">שולחן (%1$d)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>